mainapp/manifests/with_pingpong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hy-kube-mainapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hy-kube-mainapp
  template:
    metadata:
      labels:
        app: hy-kube-mainapp
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: hy-kube-mainapp-pingpong-claim
      containers:
        - name: hy-kube-mainapp-reader
          image: tkasu/hy-kube-mainapp-reader:ex1.11
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/app/files
        - name: hy-kube-mainapp-writer
          image: tkasu/hy-kube-mainapp-writer:ex1.11
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/app/files
        - name: hy-kube-pingpong
          image: tkasu/hy-kube-pingpong:ex1.11
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/app/files
