mainapp/manifests/with_pingpong/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hy-kube-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: hy-kube-mainapp-svc
              servicePort: 2345
          - path: /pingpong
            backend:
              serviceName: hy-kube-mainapp-svc
              servicePort: 3567
